<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:paddingTop="32dp"
        android:paddingHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/back_but"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:layout_marginBottom="24dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/headerTextView"
        android:text="@string/checkout_order"/>
    

        
        <LinearLayout
            android:layout_marginTop="28dp"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editTextDetail"
                android:text="@string/check_order_edit_text_detail_adrees"/>
            <AutoCompleteTextView
                android:id="@+id/address_but"
                android:inputType="none"
                android:layout_width="match_parent"
                style="@style/edit_text_style"

                android:text="@string/check_order_edit_text_text_adrees"/>

            <TextView
                android:layout_marginTop="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editTextDetail"
                android:text="@string/check_order_edit_text_date_and_time"/>
            <EditText
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                style="@style/edit_text_style"

                android:hint="@string/check_order_edit_text_hint_date_and_time"/>


            <TextView
                android:layout_marginTop="32dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editTextDetail"
                android:text="@string/check_order_detail_patients"/>

            <AutoCompleteTextView
                android:id="@+id/set_single_patient"
                android:inputType="none"
                android:layout_width="match_parent"
                style="@style/edit_text_style"
                android:text="&#128104; Тицкий Эдуард"
                android:drawableEnd="@drawable/ic_dropdown"
                android:paddingEnd="15dp"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcv_set_patients_analyze"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_patient_but"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_blue_empty"
                android:text="Добавить еще пациента"
                android:layout_marginTop="16dp"
                android:textColor="@color/onPrimary"/>

            <LinearLayout
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/editTextDetail"
                    android:text="Телефон *"/>

                <EditText
                    android:id="@+id/input_phone"
                    android:layout_width="match_parent"
                    style="@style/edit_text_style"
                    android:hint="Введите номер телефона"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/editTextDetail"
                    android:text="Комментарий"/>

                <Space
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <ImageView
                    android:src="@drawable/ic_micro"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

                <EditText
                    android:id="@+id/comments_et"

                    android:layout_width="match_parent"
                    style="@style/edit_text_style"
                    android:gravity="start"
                    android:paddingTop="8dp"
                    android:hint="Можете оставить свои пожелания"
                    android:layout_height="120dp"/>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F5F5F9"

        android:paddingTop="16dp"
        android:paddingBottom="32dp"
        android:paddingHorizontal="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Оплата Apple Pay"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:textSize="15sp"

            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/promo_code_but"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Промокод"
            android:drawableEnd="@drawable/ic_right_arrow"
            android:textSize="15sp"
            android:layout_marginTop="16dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/count_analyze_tv"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="1 анализ"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/price_tv"

                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:text="690 ₽"
                android:gravity="end"
                android:textColor="@color/black"/>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/order_but"
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:enabled="false"

            android:text="Заказать"
            style="@style/button_custom_theme"/>

    </LinearLayout>

    </LinearLayout>
</ScrollView>